# gridtokenx-chain-bridge

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SKILL.md  TEST_CHECKLIST.md  behavioural.json  build.rs  skills-lock.json  triggering.json
.github/workflows/: ci.yml
.kilocode/skills/: axum-code-review  tokio-async-code-review
.qwen/skills/: rust-code-review
crates/chain-bridge-api/: Cargo.toml  build.rs
crates/chain-bridge-api/src/: agent_memory.rs  harness.rs  lib.rs  main.rs
crates/chain-bridge-api/src/api/: mod.rs  provider.rs  service.rs  tests.rs
crates/chain-bridge-api/src/nats_consumer/: auth.rs  consumer.rs  dedup.rs  mod.rs  tests.rs
crates/chain-bridge-api/tests/: invariants.rs
crates/chain-bridge-core/: Cargo.toml
crates/chain-bridge-core/src/: audit.rs  error.rs  lib.rs  nonce.rs  ports.rs
crates/chain-bridge-persistence/: Cargo.toml
crates/chain-bridge-persistence/src/: lib.rs  litesvm_sim.rs  nonce_store.rs  postgres_audit.rs  solana_client.rs  vault_signer.rs
crates/chain-bridge-protocol/: Cargo.toml  build.rs
crates/chain-bridge-protocol/src/: lib.rs
scratch/: calc_disc.rs
src/: api.rs  lib.rs  main.rs  middleware.rs  nats_consumer.rs  vault.rs
src/api/: provider.rs  service.rs  tests.rs
src/nats_consumer/: mod.rs  tests.rs
tests/: invariants.rs
