# ---------------------------------------------------------------------------
# Chain Bridge — virtual workspace manifest
# ---------------------------------------------------------------------------
# The 5-crate split is complete: the running binary lives in
# crates/chain-bridge-api (lib `gridtokenx_chain_bridge` + bin
# `gridtokenx-chain-bridge`); its driven adapters in chain-bridge-persistence
# implement the ports in chain-bridge-core; chain-bridge-protocol holds the
# generated ConnectRPC bindings. The root is now a pure virtual manifest — no
# package — so the signing path is a single member crate, not the root.
#
# Build/run the binary from this root (target dir + bin name unchanged):
#   cargo build --release --bin gridtokenx-chain-bridge
#   cargo run --bin gridtokenx-chain-bridge
[workspace]
members = ["crates/*"]
resolver = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
