[package]
name = "chain-bridge-persistence"
version = "0.1.0"
edition = "2024"
description = "Adapters: Vault signer, Solana client, Postgres audit, LiteSVM simulator — impl the chain-bridge-core ports."

[lib]
name = "chain_bridge_persistence"
path = "src/lib.rs"

[dependencies]
chain-bridge-core = { path = "../chain-bridge-core" }

# Solana
solana-sdk = "2.3.1"
solana-client = "2.3.1"
solana-transaction-status = "2.3.1"
solana-account = "3.4.0"
solana-address = "2.6.0"
solana-transaction = "3.1.0"
litesvm = "0.10.0"

# Vault HTTP
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.21"

# Audit store
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }

# Shared
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tokio = { version = "1.48", features = ["sync", "rt", "macros"] }
tracing = "0.1"
